[package]
name = "lib_hello_world"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library that simply prints the Hello world greeting"
homepage = "https://github.com/thefossguy/lib_hello_world"
documentation = "https://github.com/thefossguy/lib_hello_world"
repository = "https://github.com/thefossguy/lib_hello_world"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
